--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
 <div class="menu-overlay" id="menu-overlay">
   <div class="menu-content">
-    <a href="/">Home</a>
+    <a href="/plus/index.html">Home</a>
     <a href="/rendite/index.html">Rendite</a>
     <a href="/timer/index.html">Timer</a>
     <a href="/plus/about.html">About</a>
