--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+mp3
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -246,7 +247,7 @@
     <div id="progressBar" class="progress-bar"></div>
   </div>
   <i id="resetButton" class="material-icons reset-button">replay</i>
-  <audio id="alarmSound" src="https://www.soundjay.com/button/sounds/beep-07.mp3" preload="auto"></audio>
+  <audio id="alarmSound" src="alarm.mp3" preload="auto"></audio>
 </div>
 
 <div class="dark-mode-icon" id="dark-mode-toggle">&#x2600;</div>
