--- a/index.html
+++ b/index.html
@@ -303,9 +303,9 @@
       remainingTime -= elapsed;
       if (remainingTime <= 0) {
         remainingTime = 0;
-        timerDisplay.textContent = 'Zeit abgelaufen!';
-        document.title = 'Zeit abgelaufen!';
-        alarmSound.play();
+        if (!alarmSound.played.length) {
+          alarmSound.play();
+        }
       } else {
         updateTimerDisplay();
         updateProgressBar();
@@ -338,9 +338,12 @@
 
       if (remainingTime <= 0) {
         clearInterval(timer);
+        remainingTime = 0;
         timerDisplay.textContent = 'Zeit abgelaufen!';
         document.title = 'Zeit abgelaufen!';
-        alarmSound.play();
+        if (!alarmSound.played.length) {
+          alarmSound.play();
+        }
       }
     }, 1000);
   }
@@ -400,10 +403,10 @@
     timerDisplay.textContent = displayText;
 
     // Berechne den Fortschritt und aktualisiere den Tab-Titel
-    const progress = Math.round(((totalTime - remainingTime) / totalTime) * 6);
+    const progress = Math.round(((totalTime - remainingTime) / totalTime) * 10);
     const filled = '█'.repeat(progress);
-    const empty = '▁'.repeat(6 - progress);
-    document.title = `${filled}${empty} ${titleText}`;
+    const empty = '▁'.repeat(10 - progress);
+    document.title = `⏱ ${filled}${empty} ${titleText}`;
   }
 
   function updateProgressBar() {
@@ -420,7 +423,7 @@
     progressBar.style.width = '0%';
     timeInput.value = '';
     timeInput.focus();
-    document.title = 'Timer';
+    document.title = '⏱ Timer';
   }
 </script>
 
