--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -24,7 +25,7 @@
       height: 100vh;
       background-color: #fff;
       text-align: center;
-      transition: background-color 0.3s, color 0.3s;
+      transition: background-color 0.5s, color 0.3s;
       position: relative;
     }
 
@@ -161,7 +162,7 @@
       border: none;
       border-bottom: 2px solid #1976D2;
       outline: none;
-      font-size: 18px;
+      font-size: 30px;
       width: 100%;
       padding: 10px;
       box-sizing: border-box;
@@ -217,9 +218,15 @@
     .dark-mode .progress-bar {
       background: #BB86FC;
     }
-
+    .dark-mode .reset-button {
+      font-size: 22px;
+      color: #BB86FC;
+      cursor: pointer;
+      margin-top: 20px;
+      display: none; /* Initially hidden */
+    }
     .reset-button {
-      font-size: 20px;
+      font-size: 22px;
       color: #1976D2;
       cursor: pointer;
       margin-top: 20px;
@@ -244,7 +251,7 @@
 </div>
 
 <div class="timer-container">
-  <input type="text" id="timeInput" class="input-field" placeholder="Zeit (z.B. 10s, 1.5m, 1:30m, 2h)" autofocus>
+  <input type="text" id="timeInput" class="input-field" placeholder="6s, 1.5m, 2:10m, 1h" autofocus>
   <div id="timerDisplay" class="timer-display"></div>
   <div class="progress-bar-container" id="progressBarContainer">
     <div id="progressBar" class="progress-bar"></div>
@@ -339,8 +346,8 @@
       if (remainingTime <= 0) {
         clearInterval(timer);
         remainingTime = 0;
-        timerDisplay.textContent = 'Zeit abgelaufen!';
-        document.title = 'Zeit abgelaufen!';
+        timerDisplay.textContent = 'Zeit abgelaufen.';
+        document.title = 'Zeit abgelaufen.';
         if (!alarmSound.played.length) {
           alarmSound.play();
         }
@@ -406,7 +413,7 @@
     const progress = Math.round(((totalTime - remainingTime) / totalTime) * 6);
     const filled = '█'.repeat(progress);
     const empty = '▁'.repeat(6 - progress);
-    document.title = `${filled}${empty} ${titleText}`;
+    document.title =  ${titleText}` `${filled}${empty};
   }
 
   function updateProgressBar() {
@@ -423,7 +430,7 @@
     progressBar.style.width = '0%';
     timeInput.value = '';
     timeInput.focus();
-    document.title = '⏱ Timer';
+    document.title = 'Timer';
   }
 </script>
 
