--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -6,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Timer</title>
   <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-<link rel="manifest" href="favicon/site.webmanifest">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
     @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
@@ -25,7 +24,7 @@
       height: 100vh;
       background-color: #fff;
       text-align: center;
-      transition: background-color 0.5s, color 0.3s;
+      transition: background-color 0.3s, color 0.3s;
       position: relative;
     }
 
@@ -162,7 +161,7 @@
       border: none;
       border-bottom: 2px solid #1976D2;
       outline: none;
-      font-size: 30px;
+      font-size: 48px;
       width: 100%;
       padding: 10px;
       box-sizing: border-box;
@@ -218,13 +217,17 @@
     .dark-mode .progress-bar {
       background: #BB86FC;
     }
-    
+
     .reset-button {
-      font-size: 22px;
+      font-size: 48px;
       color: #1976D2;
       cursor: pointer;
       margin-top: 20px;
       display: none; /* Initially hidden */
+    }
+
+    .dark-mode .reset-button {
+      color: #BB86FC;
     }
   </style>
 </head>
@@ -245,7 +248,7 @@
 </div>
 
 <div class="timer-container">
-  <input type="text" id="timeInput" class="input-field" placeholder="6s, 1.5m, 2:10m, 1h" autofocus>
+  <input type="text" id="timeInput" class="input-field" placeholder="Zeit (z.B. 6s, 1.5m, 2:10m, 1h)" autofocus>
   <div id="timerDisplay" class="timer-display"></div>
   <div class="progress-bar-container" id="progressBarContainer">
     <div id="progressBar" class="progress-bar"></div>
@@ -295,10 +298,8 @@
 
   document.addEventListener('visibilitychange', function() {
     if (document.hidden) {
-      // Der Tab ist im Hintergrund
       timerPausedAt = Date.now();
     } else {
-      // Der Tab ist wieder im Vordergrund
       const now = Date.now();
       const elapsed = Math.floor((now - timerPausedAt) / 1000);
       remainingTime -= elapsed;
@@ -317,7 +318,7 @@
   function startTimer() {
     const { time, unit: timeUnit } = parseTimeInput(timeInput.value);
     if (time === null || time <= 0) {
-      alert('Bitte geben Sie eine gültige Zeit im Format 10s, 1.5m, 1:30m oder 2h ein.');
+      alert('Bitte geben Sie eine gültige Zeit im Format 6s, 1.5m, 2:10m oder 1h ein.');
       return;
     }
 
@@ -391,23 +392,30 @@
         const minutes = Math.floor(remainingTime / 60);
         const seconds = (remainingTime % 60).toFixed(0).replace(/\.0$/, '');
         displayText = `${minutes}:${seconds.padStart(2, '0')}m`;
-        titleText = minutes > 0 ? `${minutes}m` : `${minutes}:${seconds.padStart(2, '0')}m`;
+        titleText = `${minutes}:${seconds.padStart(2, '0')}m`;
+        if (remainingTime >= 60) {
+          displayText = `${minutes}m`;
+          titleText = `${minutes}m`;
+        }
         break;
       case 'h':
         const hours = Math.floor(remainingTime / 3600);
         const mins = Math.floor((remainingTime % 3600) / 60);
         const secs = (remainingTime % 60).toFixed(0).replace(/\.0$/, '');
         displayText = secs === "0" ? `${hours}:${String(mins).padStart(2, '0')}h` : `${hours}:${String(mins).padStart(2, '0')}:${secs.padStart(2, '0')}h`;
-        titleText = mins > 0 ? `${hours}:${String(mins).padStart(2, '0')}h` : `${hours}:${String(mins).padStart(2, '0')}:${secs.padStart(2, '0')}h`;
+        titleText = `${hours}:${String(mins).padStart(2, '0')}h`;
+        if (remainingTime >= 3600) {
+          displayText = `${hours}:${String(mins).padStart(2, '0')}h`;
+          titleText = `${hours}:${String(mins).padStart(2, '0')}h`;
+        }
         break;
     }
     timerDisplay.textContent = displayText;
 
-    // Berechne den Fortschritt und aktualisiere den Tab-Titel
     const progress = Math.round(((totalTime - remainingTime) / totalTime) * 6);
     const filled = '█'.repeat(progress);
     const empty = '▁'.repeat(6 - progress);
-    document.title =  '${titleText} ${filled}${empty}';
+    document.title = `${titleText} ${filled}${empty}`;
   }
 
   function updateProgressBar() {
