--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       text-align: center;
       max-width: 300px;
       width: 100%;
-      height: 300px;
+      height: 300px; /* Fix the height to prevent resizing */
       transition: background 0.3s, box-shadow 0.3s;
       margin: 20px;
       position: relative;
@@ -162,7 +162,7 @@
       border: none;
       border-bottom: 2px solid #1976D2;
       outline: none;
-      font-size: 18px;
+      font-size: 48px; /* Match the size of the displayed time */
       width: 100%;
       padding: 10px;
       box-sizing: border-box;
@@ -171,6 +171,10 @@
       transition: border-bottom-color 0.3s, background-color 0.3s;
       color: black;
       background-color: transparent;
+    }
+
+    .input-field::placeholder {
+      font-size: 18px; /* Smaller placeholder text */
     }
 
     .timer-display {
@@ -249,7 +253,7 @@
 </div>
 
 <div class="timer-container">
-  <input type="text" id="timeInput" class="input-field" placeholder="6s, 1.5m, 2:10m, 1h" style="font-size: 18px;" autofocus>
+  <input type="text" id="timeInput" class="input-field" placeholder="6s, 1.5m, 2:10m, 1h" autofocus>
   <div id="timerDisplay" class="timer-display"></div>
   <div class="progress-bar-container" id="progressBarContainer">
     <div id="progressBar" class="progress-bar"></div>
@@ -342,8 +346,8 @@
       if (remainingTime <= 0) {
         clearInterval(timer);
         remainingTime = 0;
-        timerDisplay.textContent = 'Timer abgelaufen.';
-        document.title = 'Timer abgelaufen.';
+        timerDisplay.textContent = 'Timer abgelaufen'; // Ändere diesen Text
+        document.title = 'Timer abgelaufen'; // Ändere auch diesen Text
         if (!alarmSound.played.length) {
           alarmSound.play();
         }
