--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       align-items: center;
       justify-content: center;
       height: 100vh;
-      background-color: #fff;
+      background-color: #F8F8F8;
       text-align: center;
       transition: background-color 0.3s, color 0.3s;
       position: relative;
@@ -156,6 +156,9 @@
       margin: 20px;
       position: relative;
       z-index: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between; /* Evenly space the children */
     }
 
     .input-field {
@@ -227,7 +230,6 @@
       font-size: 38px; /* 80% of 48px */
       color: #1976D2;
       cursor: pointer;
-      margin-top: 20px;
       display: none; /* Initially hidden */
     }
 
