--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       text-align: center;
       margin-bottom: 10px; /* Reduced margin */
       transition: border-bottom-color 0.3s, background-color 0.3s;
-      color: black;
+      color: #1976D2;
       background-color: transparent;
     }
 
