--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       text-align: center;
       margin-bottom: 10px; /* Reduced margin */
       transition: border-bottom-color 0.3s, background-color 0.3s;
-      color: #1976D2;
+      color: #6c757d; /* Farbe der Eingabeschrift */
       background-color: transparent;
     }
 
